--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "syscall.h": "c",
-        "init.h": "c"
+        "init.h": "c",
+        "directory.h": "c",
+        "io.h": "c"
     }
 }
