--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,18 @@
 {
     "files.associations": {
+        "*.py": "python",
         "random": "c",
         "functional": "c",
-        "malloc.h": "c"
+        "malloc.h": "c",
+        "*.tcc": "c",
+        "string_view": "c",
+        "quat": "c",
+        "vec2d": "c",
+        "vec2f": "c",
+        "vec3d": "c",
+        "vec3f": "c",
+        "vec4d": "c",
+        "vec4f": "c",
+        "tuple": "c"
     }
 }
