fixed some more bugs

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -3,6 +3,9 @@
         "syscall.h": "c",
         "init.h": "c",
         "directory.h": "c",
-        "io.h": "c"
+        "io.h": "c",
+        "string_view": "c",
+        "*.inc": "c",
+        "syscall-nr.h": "c"
     }
 }
