--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,22 @@
         "vec3f": "c",
         "vec4d": "c",
         "vec4f": "c",
-        "tuple": "c"
+        "tuple": "c",
+        "syscall-nr.h": "c",
+        "array": "c",
+        "hash_map": "c",
+        "hash_set": "c",
+        "bitset": "c",
+        "initializer_list": "c",
+        "ranges": "c",
+        "utility": "c",
+        "bufferobject": "c",
+        "image": "c",
+        "mixinvector": "c",
+        "texture": "c",
+        "vertexarraystate": "c",
+        "buffered_value": "c",
+        "fast_back_stack": "c",
+        "condition_variable": "c"
     }
 }
